2006-04-20  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes the events appearing in different timezone appear in
	right time slot. Partially fixes #332911
	* gui/e-cal-model.c: (e_cal_model_set_instance_times):
	* gui/e-calendar-view.c: (get_label),
	(e_calendar_view_get_tooltips): Get the timezone from the backend
	using the tzid if its not present in the icalcomponent.

2006-05-04  Chenthill Palanisamy  <pchenthill novell com>

	Fixes #333689
	* gui/dialogs/event-page.c
	(init_widgets): Check if the units is -1 before
	adding the menu item.

2006-04-24  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #323409
	* gui/calendar-component.c: (setup_create_ecal): Reset the ecal to NULL.
	* gui/e-calendar-view.c: 
	(e_calendar_view_new_appointment_for): If the default client does not
	exist do not open the dialog.
	
2006-04-22  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/event-page.c (attendee_added_cb):
	Add the delfrom property to the delegatee. Fixes
	#165714 (bugzilla.novell.com)

2006-04-07  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #163039
	* gui/e-meeting-store.c: (ems_finalize), (ems_init),
	(process_callbacks), (refresh_busy_periods): Removed the
	async queue, updated the gui via the callback function in a
	idle loop as and when we receive the free busy information.
	(e_meeting_store_get_num_queries): Fixed a warning.
	* gui/e-meeting-store.h:
	* gui/e-meeting-time-sel.c: 
	(e_meeting_time_selector_refresh_cb): Changed the return type of 
	the function to return a boolean variable.

2006-04-05  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-day-view.c: (e_day_view_on_main_canvas_motion):
	Enable drag and drop of recurring appointments.

2006-04-05  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #328808
	* gui/dialogs/event-editor.c: 
	(event_editor_construct): Set the name selector dialog present in the schedule page
	in event page also.
	* gui/dialogs/event-page.[ch] 