@@ -1,3 +1,8 @@
+2006-05-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>
+
+	**Fixes bug #331418
+	* gui/memos-component.c: Set mnemonics in popup menu.
+
 2006-04-20  Chenthill Palanisamy  <pchenthill@novell.com>
 
 	Fixes the events appearing in different timezone appear in
